--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,5 +19,5 @@
         "titleBar.inactiveBackground": "#8b310299",
         "titleBar.inactiveForeground": "#e7e7e799"
     },
-    "peacock.remoteColor": "#8b3102"
+    "peacock.remoteColor": "#8b3102",
 }
